Fixes Off-Canvas menu height issue
Off-canvas menu was trunacted when the hight of the main conent was
smaller than the height of the menu. Added css rule and now the menu
scrolls instead of truncating.

Fixes #20

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,12 @@
 // Foundation Icons
 @import 'foundation-icons';
 
+// Off-Canvas Menu
+
+#offCanvasLeft {
+  height: 100%
+}
+
 // variables
 $accordion-bg: #4d5158;
 $accordion-sub-bg: #35383d;
